<resources>
    <string name="app_name">Quiz</string>
    <string name="text_question">Question</string>
    <string name="button_true">True</string>
    <string name="button_false">False</string>
    <string name="button_play">START GAME</string>
    <string name="points">" Points:"</string>
    <string name="textView_startGame">Press START GAME to play!</string>
    <string name="textView_welcome">Welcome to my Questions game!</string>
    <string name="textView_congrats">Congratulations for finishing!</string>
    <string name="textView_finalScore">Your final score is: </string>
    <string name="button_playAgain">Play Again!</string>
    <string name="textView_questionNumber">Question Number: </string>
</resources>
